My site ready for deployment.

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ max-width: 100%;
 
 .Skillsection,
 .contactSection {
-    background-color: rgb(98, 22, 136);
+    background-color: blueviolet;
     color: #fff;
     padding: 100px 0;
 
